--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,22 @@
 
 /* Your CSS Code here. */
+
+/* Your CSS Code here. */
+table{
+	border-collapse:collapse;
+	margin:15px 12px ;
+	border-radius:10px 10px 0 0;
+	overflow: hidden;
+	min-width: 500px;
+}
+table thead {
+	background-color:red;
+	text-align:left;
+	
+}
+table th, table td{
+	padding :10px;
+}
+table tbody tr{
+	border-bottom: 2px solid #dddddd;
+}
